little bit of cleanup

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -96,8 +96,21 @@
     pages = {411--432},
 }
 
-
-
+@article{orlov_projective_1993,
+    shorthand = {Orl93},
+	title = {PROJECTIVE BUNDLES, MONOIDAL TRANSFORMATIONS, AND DERIVED CATEGORIES OF COHERENT SHEAVES},
+	volume = {41},
+	issn = {1064-5632},
+	url = {https://iopscience.iop.org/article/10.1070/IM1993v041n01ABEH002182},
+	doi = {10.1070/IM1993v041n01ABEH002182},
+	number = {1},
+	urldate = {2024-04-16},
+	journal = {Russian Academy of Sciences. Izvestiya Mathematics},
+	author = {Orlov, D O},
+	month = feb,
+	year = {1993},
+	pages = {133--141},
+}
 
 
 
@@ -138,6 +151,7 @@
 }
 
 @article{hassett_special_2000,
+    shorthand = {Hass00},
 	title = {Special {Cubic} {Fourfolds}},
 	volume = {120},
 	issn = {1570-5846},
@@ -154,8 +168,26 @@
 	keywords = {K3 surfaces, Noether-Lefschetz loci, period domains.},
 	pages = {1--23},
 }
+@article{voisin_theoreme_2008,
+    shorthand = {Voi86},
+	title = {Théorème de {Torelli} pour les cubiques de P5},
+	volume = {172},
+	copyright = {http://www.springer.com/tdm},
+	issn = {0020-9910, 1432-1297},
+	url = {http://link.springer.com/10.1007/s00222-008-0116-z},
+	doi = {10.1007/s00222-008-0116-z},
+	language = {en},
+	number = {2},
+	urldate = {2024-04-16},
+	journal = {Inventiones mathematicae},
+	author = {Voisin, Claire},
+	month = may,
+	year = {2008},
+	pages = {455--458},
+}
 
 @article{addington_hodge_2014,
+    shorthand = {AdTh14},
 	title = {Hodge theory and derived categories of cubic fourfolds},
 	volume = {163},
 	issn = {0012-7094},
@@ -212,8 +244,8 @@
 	keywords = {Algebraic Geometry (math.AG), FOS: Mathematics, FOS: Mathematics},
 }
 
-@incollection{bogomolov_derived_2010,
-    shorthand = {KuznetsovDerivedCubic},
+@incollection{KuznetsovDerivedCubic,
+    shorthand = {Kuz10},
 	address = {Boston},
 	title = {Derived {Categories} of {Cubic} {Fourfolds}},
 	volume = {282},
