--- a/body.tex
+++ b/body.tex
@@ -13,3 +13,6 @@
 \section{Derived categories of singularities and matrix factorizations}
 \input{singularities.tex}
 \newpage
+
+\section{Conclusion}
+\input{conclusion.tex}
